--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/springmusik
-spring.datasource.username=root
-spring.datasource.password=sesame80
+spring.datasource.url=jdbc:mysql://whishlist.mysql.database.azure.com:3306/springmusik
+spring.datasource.username=whishlist
+spring.datasource.password=Samsung1278
 server.port=5555
