--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://whishlist.mysql.database.azure.com:3306/springmusik
-spring.datasource.username=whishlist
-spring.datasource.password=Samsung1278
+spring.datasource.url=jdbc:mysql://${DBHOSTNAME}
+spring.datasource.username=${USERNAME}
+spring.datasource.password=${PASSWORD}
 server.port=5555
