The new jar is in the project

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://whishlist.mysql.database.azure.com:3306/springmusik
-spring.datasource.username=whishlist
-spring.datasource.password=Samsung1278
+spring.datasource.url=${url_source}
+spring.datasource.username=${url_username}
+spring.datasource.password=${url_password}
 server.port=5555
