--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=${url_source}
+spring.datasource.url=jdbc:mysql://${url_source}
 spring.datasource.username=${url_username}
 spring.datasource.password=${url_password}
 server.port=5555
